fix z-index stacking

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -40,7 +40,8 @@ body
 		margin-right: 15px
 		nav
 			padding-right: 15px
-
+main
+	z-index: 3
 .flex
   height: 100%
   @include display(flex)
